<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gris_medio"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".RecuperoActivity">

    <!-- Barra superior -->
    <TextView
        android:id="@+id/navbar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/azul"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:gravity="center"
        android:textStyle="bold" />

    <!-- Título -->
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/re_title"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <!-- Imagen principal -->
    <ImageView
        android:id="@+id/logo2"
        android:layout_width="305dp"
        android:layout_height="198dp"
        android:layout_marginBottom="5dp"
        android:src="@drawable/liga" />

    <!-- Subtítulo -->
    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingHorizontal="20dp"
        android:text="@string/tituloRecupero"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <!-- Formulario -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center_horizontal">

        <!-- Input de email -->
        <EditText
            android:id="@+id/editPass"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:hint="Correo electrónico"
            android:inputType="textEmailAddress"
            android:gravity="center" />

        <!-- Botón enviar -->
        <Button
            android:id="@+id/enviar"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:backgroundTint="@color/azul"
            android:onClick="registerAc"
            android:text="@string/enviar"
            android:textColor="@color/white" />

        <!-- Botón volver -->
        <Button
            android:id="@+id/volverRecupero"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:backgroundTint="@color/azul"
            android:onClick="recuperoVolver"
            android:text="@string/volver"
            android:textColor="@color/white" />

        <!-- Imagen inferior -->
        <ImageView
            android:id="@+id/logo"
            android:layout_width="203dp"
            android:layout_height="126dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/password" />
    </LinearLayout>
</LinearLayout>
