<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gris_medio"
    tools:context=".MainActivity">

    <!-- Encabezado -->
    <TextView
        android:id="@+id/navbar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/azul"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:gravity="center"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Logo -->
    <FrameLayout
        android:id="@+id/logo_section"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/gris_medio"
        app:layout_constraintTop_toBottomOf="@id/navbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="200dp"
            android:layout_height="1200dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/liga" />
    </FrameLayout>

    <!-- Usuario -->
    <TextView
        android:id="@+id/usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usuario"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/logo_section"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/userEdit"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        app:layout_constraintTop_toBottomOf="@id/usuario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Contraseña -->
    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingreseContrasenia"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/userEdit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/passEdit"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Botones y enlaces -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/passEdit"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/login"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginVertical="5dp"
            android:backgroundTint="@color/azul"
            android:onClick="login"
            android:text="@string/IniciarSesion"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/registrarse"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginVertical="5dp"
            android:backgroundTint="@color/azul"
            android:onClick="registerAc"
            android:text="@string/registrarse"
            android:textColor="@color/white"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="15dp">

            <ImageView
                android:id="@+id/factor"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/factor"
                android:layout_marginEnd="10dp" />

            <TextView
                android:id="@+id/seguridad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="seguridad"
                android:text="@string/factor"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/btnRecuperoContrasenia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="RecuperoContrasenia"
            android:text="@string/olvidoDeContrasenia"
            android:textAlignment="center"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"/>

        <TextView
            android:id="@+id/txtR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/derechosReservados"
            android:textAlignment="center"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
