<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gris_medio"
    tools:context=".RegistroActivity">

    <!-- Barra azul superior con texto -->
    <TextView
        android:id="@+id/navbar"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@color/azul"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:gravity="center"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Contenedor principal con logo y título -->
    <LinearLayout
        android:id="@+id/rootLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-30dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintTop_toBottomOf="@id/navbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="315dp"
            android:layout_height="213dp"
            android:layout_marginTop="-20dp"
            android:layout_marginBottom="5dp"
            android:src="@drawable/liga"
            android:contentDescription="Logo" />

        <TextView
            android:id="@+id/rTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titulo"
            android:textAlignment="center"
            android:textSize="30sp"
            android:gravity="center" />

        <TextView
            android:id="@+id/rContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/legenda"
            android:textSize="15sp"
            android:gravity="center"
            android:textAlignment="center" />
    </LinearLayout>

    <!-- Contenido del formulario de registro -->
    <LinearLayout
        android:id="@+id/registerContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="30dp"
        app:layout_constraintTop_toBottomOf="@id/rootLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Nombre y Apellido -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/nombreText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:hint="Ingrese nombre"
                android:inputType="text"
                android:gravity="center"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/apellidoText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:hint="Ingrese apellido"
                android:inputType="text"
                android:gravity="center"
                android:textAlignment="center" />
        </LinearLayout>

        <!-- Email -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/emailText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="5dp"
                android:layout_marginHorizontal="5dp"
                android:hint="Ingrese su email"
                android:inputType="textEmailAddress"
                android:gravity="center"
                android:textAlignment="center" />
        </LinearLayout>

        <!-- Edad -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/edadText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="5dp"
                android:layout_marginHorizontal="5dp"
                android:hint="Ingrese su edad"
                android:inputType="number"
                android:gravity="center"
                android:textAlignment="center" />
        </LinearLayout>

        <!-- Contraseña con toggle -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="5dp"
                android:layout_marginHorizontal="5dp">

                <EditText
                    android:id="@+id/passwordText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Ingrese su contraseña"
                    android:inputType="textPassword"
                    android:gravity="center"
                    android:paddingEnd="40dp"
                    android:textAlignment="center" />

                <ImageView
                    android:id="@+id/togglePassword"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/visibleoff"
                    android:contentDescription="Ver contraseña"
                    android:clickable="true"
                    android:focusable="true" />
            </RelativeLayout>
        </LinearLayout>

        <!-- Botones -->
        <Button
            android:id="@+id/registrarse"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/azul"
            android:onClick="registerAc"
            android:text="@string/registrarse"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/volver"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/azul"
            android:onClick="registerVolver"
            android:text="@string/volver"
            android:textColor="@color/white" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>